Fix key dot alignment

--- a/code/odh-parking.scss
+++ b/code/odh-parking.scss
@@ -227,5 +227,7 @@
   span {
     padding-left: 15px;
     font-size: 12px;
+    height: 30px;
+    line-height: 30px;
   }
 }
